[package]
name = "hecs-schedule"
version = "0.7.0"
edition = "2021"
description = "Provides shedulable systems and parallel execution for hecs"
readme = "README.md"
license-file = "LICENSE"
authors = ["Tei Roberts"]
documentation = "https://docs.rs/hecs-schedule"
repository = "https://github.com/ten3roberts/hecs-schedule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
atomic_refcell = "0.1.8"
hecs = { version = "0.9.0", features = ["macros", "serde"] }
rayon = { version = "1.5.3", optional = true }
smallvec = "1.9.0"
thiserror = "1.0.31"

[features]
default = ["parallel"]
parallel = ["rayon"]
