[package]
name = "hecs-schedule"
version = "0.7.0"
edition = "2021"
description = "Provides shedulable systems and parallel execution for hecs"
readme ="README.md"
license-file = "LICENSE"
authors = [ "Tei Roberts" ]
documentation = "https://docs.rs/hecs-schedule"
repository = "https://github.com/ten3roberts/hecs-schedule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
atomic_refcell = "0.1.13"
hecs = { version = "0.10.4", features = [ "macros" ] }
rayon = { version = "1.8.0", optional = true }
smallvec = "1.11.2"
thiserror = "1.0.53"

[features]
default = [ "parallel" ]
parallel = [ "rayon" ]
